# Lootforge

./: .gitignore  Cargo.toml  index.html  package-lock.json  ship  ship cloudflare.ps1  ship.ps1  wrangler.toml
assets/: manifest.json  sw.js
lootforge-macros/: Cargo.toml
lootforge-macros/src/: lib.rs
src/: app.rs  elemental.rs  explorer.rs  item.rs  lib.rs  main.rs  prelude.rs  timekeeper.rs  util.rs
src/combat/: battle.rs  buff.rs  combatant.rs  enemy.rs  hooks.rs  mod.rs
src/combat/skill/: attack.rs  defend.rs  hit.rs  mod.rs  skill.rs  targeting.rs
src/dungeon/: dungeon.rs  dungeon_data.rs  encounter.rs  floor.rs  mod.rs  reward.rs
src/equipment/: equipment.rs  mod.rs  wardrobe.rs
src/item/: item.rs  item_type.rs  mod.rs  tags.rs
src/mods/: atk_mod.rs  attune.rs  char_mod.rs  def_mod.rs  mod.rs  roll_tables.rs
src/panels/: animation.rs  cheats.rs  dungeon.rs  gear.rs  header.rs  loot.rs  mod.rs  rewards.rs  settings.rs
src/panels/dungeon/: combatant.rs  dungeon.rs  mod.rs
src/panels/forge/: attune.rs  common.rs  forge.rs  mod.rs  reroll_random.rs  reroll_target.rs  upgrade.rs
src/prelude/: macros.rs  mod.rs
src/stash/: filters.rs  mod.rs  order.rs  stash.rs
src/storage/: mod.rs  native.rs  save_v1.rs  ser.rs  ser_v1.rs  storage_manager.rs  web.rs
src/widgets/: item_drop_zone.rs  mod.rs  selectable_image.rs  text_in_rect.rs
